--- a/i18n/ko/docusaurus-plugin-content-docs/current.json
+++ b/i18n/ko/docusaurus-plugin-content-docs/current.json
@@ -3,16 +3,16 @@
     "message": "Next",
     "description": "The label for version current"
   },
-  "sidebar.tutorialSidebar.category.Basics": {
-    "message": "Basics",
-    "description": "The label for category Basics in sidebar tutorialSidebar"
+  "sidebar.tutorialSidebar.category.User Guide": {
+    "message": "유저 가이드",
+    "description": "The label for category User Guide in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.Basics.link.generated-index.description": {
-    "message": "Basic usage for IaCDOG.",
-    "description": "The generated-index page description for category Basics in sidebar tutorialSidebar"
+  "sidebar.tutorialSidebar.category.User Guide.link.generated-index.description": {
+    "message": "IaCDOG 유저 가이드",
+    "description": "The generated-index page description for category User Guide in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Sidebar": {
-    "message": "Sidebar",
+    "message": "사이드바",
     "description": "The label for category Sidebar in sidebar tutorialSidebar"
   }
 }
