--- a/i18n/ko/docusaurus-theme-classic/footer.json
+++ b/i18n/ko/docusaurus-theme-classic/footer.json
@@ -20,7 +20,7 @@
     "description": "The label of footer link with label=GitHub linking to https://github.com/orgs/InitCloud-co/discussions/categories/-iacdog"
   },
   "copyright": {
-    "message": "Copyright © 2024 My Project, Inc. Built with Docusaurus.",
+    "message": "Copyright © 2024 Init Cloud Corp.",
     "description": "The footer copyright"
   }
 }
