feat: add baseurl

--- a/docs/about-iacdog.mdx
+++ b/docs/about-iacdog.mdx
@@ -4,18 +4,13 @@ sidebar_position: 3
 
 # About IaCDOG
 
-`IaCDOG` is a tool that supports visualization of `IaC`, allowing anyone using `Terraform`. `IaCDOG` quickly and easily create visualizations. Currently, `IaCDOG` only supports Terraform visualizations, but we will continue to expand it to support many other `IaC` visualizations.
+`IaCDOG` is `IaC` static code visualization service. Allowing anyone using `Terraform` can get readable cloud infrastructure diagram fast and easy.
 
-<p align="center">
-  <a
-    href="https://www.initcloud.io/iacdog/visualizer"
-    target="_blank"
-    rel="noreferrer noopener"
-    alt="iacdog-logo"
-  >
-    <img src="/img/logo.png" alt="id" style={{ width: 200 }} />
-  </a>
-</p>
+Currently, `IaCDOG` only supports Terraform visualizations, but we will continue to expand it to support many other `IaC` visualizations.
+
+import { DocsLogo } from "@site/src/components/DocsLogo";
+
+<DocsLogo />
 
 <br />
 
