--- a/docs/user-guide/run-visualization.mdx
+++ b/docs/user-guide/run-visualization.mdx
@@ -8,16 +8,9 @@ Experience fast, readable static code visualization.
 
 ## Go to IaCDOG {#goto-iacdog}
 
-<p align="center">
-  <a
-    href="https://www.initcloud.io/iacdog/visualizer"
-    target="_blank"
-    rel="noreferrer noopener"
-    alt="iacdog-logo"
-  >
-    <img src="/img/logo.png" alt="id" style={{ width: 200 }} />
-  </a>
-</p>
+import { DocsLogo } from "@site/src/components/DocsLogo";
+
+<DocsLogo />
 
 Access the [IaCDOG](https://www.initcloud.io/iacdog/visualizer).
 
