--- a/i18n/ko/docusaurus-plugin-content-docs/current/about-iacdog.mdx
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/about-iacdog.mdx
@@ -6,16 +6,9 @@ sidebar_position: 3
 
 `IaCDOG`은 `IaC`의 시각화를 지원하는 도구로, `Terraform`을 사용한다면 누구나 빠르고 편하게 시각화를 진행할 수 있습니다. 현재는 `Terraform` 시각화만을 지원하고 있으며, 지속적으로 여러 `IaC` 시각화까지 넓혀나갈 예정입니다.
 
-<p align="center">
-  <a
-    href="https://www.initcloud.io/iacdog/visualizer"
-    target="_blank"
-    rel="noreferrer noopener"
-    alt="iacdog-logo"
-  >
-    <img src="/img/logo.png" alt="id" style={{ width: 200 }} />
-  </a>
-</p>
+import { DocsLogo } from "@site/src/components/DocsLogo";
+
+<DocsLogo />
 
 <br />
 
