--- a/i18n/ko/docusaurus-plugin-content-docs/current/user-guide/run-visualization.mdx
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/user-guide/run-visualization.mdx
@@ -8,16 +8,9 @@ sidebar_position: 2
 
 ## Go to IaCDOG {#goto-iacdog}
 
-<p align="center">
-  <a
-    href="https://www.initcloud.io/iacdog/visualizer"
-    target="_blank"
-    rel="noreferrer noopener"
-    alt="iacdog-logo"
-  >
-    <img src="/img/logo.png" alt="id" style={{ width: 200 }} />
-  </a>
-</p>
+import { DocsLogo } from "@site/src/components/DocsLogo";
+
+<DocsLogo />
 
 [IaCDOG](https://www.initcloud.io/iacdog/visualizer)에 접속해주세요.
 
